finish essential functionality of backend
