# coursework/backend/api/api.yaml
@@ -16,6 +16,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TaskList'
+  /users:
+    get:
+      summary: Get all users
+      operationId: getUsers
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskList'
   /user/{username}:
     get:
       summary: Get user by user name
@@ -42,12 +53,12 @@ paths:
       tags:
         - user
       summary: Update user
-      description: This can only be done by the logged in user.
+      description: Requires either user with name that does not yet exist or the correct user password hash
       operationId: updateUser
       parameters:
         - name: username
           in: path
-          description: name that need to be deleted
+          description: name of user
           required: true
           schema:
             type: string
@@ -66,32 +77,11 @@ paths:
       responses:
         default:
           description: successful operation
-    delete:
-      tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-        - name: username
-          in: path
-          description: The name that needs to be deleted
-          required: true
-          schema:
-            type: string
-      responses:
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
 components:
   schemas:
     UserProfile:
       type: object
       properties:
-        id:
-          type: string
-          example: todo
         name:
           type: string
           example: logende
@@ -118,8 +108,6 @@ components:
           type: number
           format: double
           example: 104.01
-        task:
-          $ref: '#/components/schemas/Task'
     Task:
       type: object
       properties:
@@ -137,17 +125,3 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Task'
-
-  securitySchemes:
-    petstore_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
